RESOLVED FIXED117736
[GStreamer] Potential race condition when getting the video sink caps.
https://bugs.webkit.org/show_bug.cgi?id=117736
Summary [GStreamer] Potential race condition when getting the video sink caps.
Víctor M. Jáquez L.
Reported 2013-06-18 06:30:36 PDT
There is a potential race condition with the pad setting caps, as the buffer and the caps won't match when renegotiation happens, and might cause a crash.
Attachments
Patch (9.05 KB, patch)
2013-06-18 07:52 PDT, Víctor M. Jáquez L.
no flags
Patch (8.98 KB, patch)
2013-06-18 10:10 PDT, Víctor M. Jáquez L.
no flags
Víctor M. Jáquez L.
Comment 1 2013-06-18 07:52:38 PDT
WebKit Commit Bot
Comment 2 2013-06-18 07:54:19 PDT
Attachment 204913 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp', u'Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h', u'Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.cpp', u'Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.h']" exit_code: 1 Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.cpp:79: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.cpp:80: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Philippe Normand
Comment 3 2013-06-18 08:17:31 PDT
Comment on attachment 204913 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=204913&action=review Ok, just a couple of nitpicks: > Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.cpp:302 > +static void webkitVideoSinkGetProperty(GObject *object, guint propId, GValue *value, GParamSpec *pspec) The stars are misplaced, we also prefer to use longer names, like propertyId and parameterSpec > Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.cpp:492 > + GstCaps* currentCaps; Please move this just before the g_object_get() call
Víctor M. Jáquez L.
Comment 4 2013-06-18 10:10:15 PDT
WebKit Commit Bot
Comment 5 2013-06-18 10:13:17 PDT
Attachment 204921 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp', u'Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h', u'Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.cpp']" exit_code: 1 Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.cpp:79: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.cpp:80: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 6 2013-06-19 02:14:21 PDT
Comment on attachment 204921 [details] Patch Clearing flags on attachment: 204921 Committed r151728: <http://trac.webkit.org/changeset/151728>
WebKit Commit Bot
Comment 7 2013-06-19 02:14:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.