[GStreamer] Potential race condition when getting the video sink caps. https://bugs.webkit.org/show_bug.cgi?id=117736

Patch by Víctor Manuel Jáquez Leal <vjaquez@igalia.com> on 2013-06-19
Reviewed by Philippe Normand.

There is a potential race condition with the pad setting caps, as the
buffer and the caps won't match when renegotiation happens, and might
cause a crash.

This patch keeps an instance of the current caps in the video sink,
and it is accessible through a getter method. Hence the player can ask
for the current caps without running into a race condition.

No new tests. No change in behaviour.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
(WebCore::MediaPlayerPrivateGStreamerBase::naturalSize):
(WebCore::MediaPlayerPrivateGStreamerBase::paint):
(WebCore::MediaPlayerPrivateGStreamerBase::currentVideoSinkCaps):
(WebCore::MediaPlayerPrivateGStreamerBase::createVideoSink):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h:
* platform/graphics/gstreamer/VideoSinkGStreamer.cpp:
(webkitVideoSinkGetProperty):
(webkitVideoSinkStop):
(webkitVideoSinkSetCaps):
(webkit_video_sink_class_init):

Canonical link: https://commits.webkit.org/135918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151728 268f45cc-cd09-0410-ab3c-d52691b4dbfc